@@ -23,8 +23,7 @@ namespace Rivet {
     void init() {
       FinalState fs(-2.0, 2.0);
       addProjection(fs, "FS");
-      // R=0.4, pTmin=0, seed_threshold=0.5:
-      addProjection(FastJets(fs, FastJets::CDFMIDPOINT, 0.4, 0.5), "MidpointJets");
+      addProjection(FastJets(fs, FastJets::CDFMIDPOINT, 0.4, JetAlg::NO_INVISIBLES, 0.5), "MidpointJets");
 
       _h_jet_pT_MB = bookHisto1D(1, 1, 1);
       _h_jet_pT_HT = bookHisto1D(2, 1, 1);
