@@ -1,5 +1,15 @@
 2015-07-01  Andy Buckley  <andy.buckley@cern.ch>
 
+	* Adding InvisiblesStrategy to JetAlg, using it rather than a bool
+	in the useInvisibles method, and updating FastJets to use this
+	approach for its particle filtering and to optionally use the enum
+	in the constructor arguments. The new default invisibles-using
+	behaviour is to still exclude _prompt_ invisibles, and the default
+	is still to exclude them all. Only one analysis
+	(src/Analyses/STAR_2006_S6870392.cc) required updating, since it
+	was the only one to be using the FastJets legacy seed_threshold
+	constructor argument.
+
 	* Adding isVisible method to Particle, taken from
 	VisibleFinalState (which now uses this).
 
